fixes profile compare stat styles on tablet/mobile

--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -334,7 +334,6 @@ body.profile, body.map, body.story {
     }
 
     @media only screen and (max-width : 768px) {
-      display: block;
 
       &.view-table, &.save-image {
         display: none;
